Disabled padding to avoid overflow in row-5

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
     grid-auto-rows: 150px;
     gap: 10px;
     border-right: var(--border);
-    padding: 1rem;
+    /*padding: 1rem;*/
     flex: 1;
 }
 
